--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.elizen.me/"
+baseURL = "https://elizen.github.io/elizen-blog/"
 languageCode = "zh-CN"
 title = "Elizen's Blog"
 theme = "hyde"
