--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ enableEmoji = true
 
 [Menus]
   main = [
-      {Name = "Archives", URL = "https://elizen.github.io/elizen-blog/post/"},
+      {Name = "Archives", URL = "https://elizen.github.io/elizen-blog/posts/"},
       {Name = "Elizen‘s Blog", URL = "https://blog.elizen.me"},
       {Name = "Tags", URL = "https://elizen.github.io/elizen-blog/tags/"},
       {Name = "Books", URL = "https://elizen.github.io/elizen-blog/books/"},
