--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,8 @@ enableEmoji = true
       {Name = "Deep Think", URL = "https://blog.elizen.me"},
       {Name = "Tags", URL = "https://elizen.me/tags/"},
       {Name = "Books", URL = "https://elizen.me/books/"},
-      {Name = "Movies", URL = "https://elizen.me/movies/"}
+      {Name = "Movies", URL = "https://elizen.me/movies/"},
+      {Name = "Photos", URL = "https://elizen.me/photos/"}
   ]
 
 [params]
