update blog theme

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://elizen.me/"
 languageCode = "zh-CN"
 title = "Elizen's Blog"
-theme = "hyde"
+theme = "ivy"
 disqusShortname = "elizen"
 hasCJKLanguage = true
 enableEmoji = true
