--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://elizen.me/"
 languageCode = "zh-CN"
-title = "Elizen's Blog"
+title = "假装斯文"
 theme = "ivy"
 disqusShortname = "elizen"
 hasCJKLanguage = true
