--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,9 @@ theme = "ivy"
 disqusShortname = "elizen"
 hasCJKLanguage = true
 enableEmoji = true
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+preserveTaxonomyNames = true
+footnotereturnlinkcontents = ↩
 
 [permalinks]
   posts = "/post/:year/:month/:day/:slug/"
@@ -12,7 +15,8 @@ enableEmoji = true
 
 [Menus]
   main = [
-      {Name = "Archives", URL = "https://elizen.me/posts/"},
+      {Name = "Posts", URL = "https://elizen.me/posts/"},
+      {Name = "NewsLetter", URL = "https://elizen.me/newsletter/"},
       {Name = "Tags", URL = "https://elizen.me/tags/"},
       {Name = "Books", URL = "https://elizen.me/books/"},
       {Name = "Movies", URL = "https://elizen.me/movies/"},
