--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ hasCJKLanguage = true
 enableEmoji = true
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 preserveTaxonomyNames = true
-footnotereturnlinkcontents = ↩
+footnotereturnlinkcontents = "↩"
 
 [permalinks]
   posts = "/post/:year/:month/:day/:slug/"
