--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
 languageCode = "zh-CN"
-title = "假装斯文"
+title = "Elizen"
 theme = "ivy"
 disqusShortname = "elizen"
 hasCJKLanguage = true
@@ -26,7 +26,7 @@ footnotereturnlinkcontents = "↩"
 [params]
   # description abou this website
   description = "There is only one thing in the world worse than being talked about, and that is not being talked about."
-  footer = "&copy; [Elizen](https://elizen.me) 2015 - 2020"
+  footer = "&copy; [Elizen](https://elizen.me) | @2015 - 2020"
   highlightjsCDN = "//cdn.bootcss.com"
   highlightjsLang = ["r", "yaml", "tex"]
   highlightjsTheme = "github"
