--- a/themes/ivy/theme.toml
+++ b/themes/ivy/theme.toml
@@ -8,8 +8,8 @@ features = ["blog"]
 min_version = "0.18"
 
 [author]
-  name = "Yihui Xie"
-  homepage = "https://yihui.name"
+  name = "Elizen"
+  homepage = "https://elizen.me"
 
 [original]
     author = "dmulholland"
