--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "/"
 languageCode = "zh-CN"
 title = "Elizen"
-theme = "ivy"
+theme = "hyde"
 disqusShortname = "elizen"
 hasCJKLanguage = true
 enableEmoji = true
