--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,7 @@ footnotereturnlinkcontents = "↩"
       {Name = "Tags", URL = "https://elizen.me/tags/"},
       {Name = "Books", URL = "https://elizen.me/books/"},
       {Name = "Movies", URL = "https://elizen.me/movies/"},
+      {Name = "Chaos", URL = "https://elizen.me/posts/chaos/"},
       {Name = "Photos", URL = "https://elizen.me/photos/"}
   ]
 
