--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ footnotereturnlinkcontents = "↩"
       {Name = "Books", URL = "https://elizen.me/books/"},
       {Name = "Movies", URL = "https://elizen.me/movies/"},
       {Name = "Chaos", URL = "https://elizen.me/posts/chaos/"},
-      {Name = "Photos", URL = "https://elizen.me/photos/"}
+      {Name = "Photos", URL = "https://elizen.me/photo/"}
   ]
 
 [params]
