--- a/config.toml
+++ b/config.toml
@@ -20,8 +20,8 @@ footnotereturnlinkcontents = "↩"
       {Name = "Tags", URL = "https://elizen.me/tags/"},
       {Name = "Books", URL = "https://elizen.me/books/"},
       {Name = "Movies", URL = "https://elizen.me/movies/"},
-      {Name = "Chaos", URL = "https://elizen.me/chaos/"},
-      {Name = "Photos", URL = "https://elizen.me/photo/"}
+      {Name = "Chaos", URL = "https://elizen.me/tags/chaos/"},
+      {Name = "Photos", URL = "https://elizen.me/photos/"}
   ]
 
 [params]
