--- a/config.toml
+++ b/config.toml
@@ -32,3 +32,6 @@ footnotereturnlinkcontents = "↩"
   highlightjsLang = ["r", "yaml", "tex"]
   highlightjsTheme = "github"
   highlightjsVersion = "9.12.0"
+
+[params.twikoo]
+	enable = true
