--- a/config.toml
+++ b/config.toml
@@ -15,13 +15,13 @@ footnotereturnlinkcontents = "↩"
 
 [Menus]
   main = [
-      {Name = "Posts", URL = "https://elizen.me/posts/"},
-      {Name = "NewsLetter", URL = "https://elizen.me/newsletter/"},
-      {Name = "Tags", URL = "https://elizen.me/tags/"},
-      {Name = "Books", URL = "https://elizen.me/books/"},
-      {Name = "Movies", URL = "https://elizen.me/movies/"},
-      {Name = "Chaos", URL = "https://elizen.me/tags/chaos/"},
-      {Name = "Photos", URL = "https://elizen.me/photos/"}
+      {Name = "posts", URL = "https://elizen.me/posts/"},
+      {Name = "newsletter", URL = "https://elizen.me/newsletter/"},
+      {Name = "tags", URL = "https://elizen.me/tags/"},
+      {Name = "books", URL = "https://elizen.me/books/"},
+      {Name = "movies", URL = "https://elizen.me/movies/"},
+      {Name = "chaos", URL = "https://elizen.me/tags/chaos/"},
+      {Name = "photos", URL = "https://elizen.me/photos/"}
   ]
 
 [params]
