--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ footnotereturnlinkcontents = "↩"
 [params.twikoo]
 	enable = true
 
-markup:
+[markup]
   highlight:
     codeFences: false
   goldmark:
