--- a/config.toml
+++ b/config.toml
@@ -33,5 +33,8 @@ footnotereturnlinkcontents = "↩"
   highlightjsTheme = "github"
   highlightjsVersion = "9.12.0"
 
+  toc = true
+  autoCollapseToc = false
+
 [params.twikoo]
 	enable = true
