--- a/config.toml
+++ b/config.toml
@@ -33,8 +33,11 @@ footnotereturnlinkcontents = "↩"
   highlightjsTheme = "github"
   highlightjsVersion = "9.12.0"
 
-  toc = true
-  autoCollapseToc = false
-
 [params.twikoo]
 	enable = true
+
+[markup]
+  [markup.tableOfContents]
+    endLevel = 3
+    ordered = false
+    startLevel = 1
