--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://elizen.me/"
-languageCode = "zh-CN"
+languageCode = "en-us"
 title = "Elizen"
 theme = "ivy"
 disqusShortname = "elizen"
