--- a/config.toml
+++ b/config.toml
@@ -11,15 +11,27 @@ footnotereturnlinkcontents = "↩"
   posts = "/posts/:year/:month/:slug/"
   newsletter = "/newsletter/:year/:month/:slug/"
 
-[Menus]
-  main = [
-      {Name = "posts", URL = "https://elizen.me/posts/"},
-      {Name = "newsletter", URL = "https://elizen.me/newsletter/"},
-      {Name = "tags", URL = "https://elizen.me/tags/"},
-      {Name = "books", URL = "https://elizen.me/books/"},
-      {Name = "movies", URL = "https://elizen.me/movies/"},
-      {Name = "photos", URL = "https://elizen.me/photos/"}
-  ]
+[menu]
+  [[menu.main]]
+  name="电影"
+  url="/movies/"
+  weight="1"
+  [[menu.main]]
+  name="阅读"
+  url="/books/"
+  weight="2"
+  [[menu.main]]
+  name="归档"
+  url="/posts/"
+  weight="3"
+  [[menu.main]]
+  name="通讯"
+  url="/newsletter/"
+  weight="4"
+  [[menu.main]]
+  name="孩童"
+  url="/kids/"
+  weight="5"
 
 [params]
   # description abou this website
