--- a/.github/workflows/douban.yml
+++ b/.github/workflows/douban.yml
@@ -17,7 +17,7 @@ jobs:
     - name: movie
       uses: lizheming/doumark-action@master
       with:
-        id: immmmm
+        id: elizen
         type: movie
         format: csv
         dir: ./data/douban
@@ -25,7 +25,7 @@ jobs:
     - name: book
       uses: lizheming/doumark-action@master
       with:
-        id: immmmm
+        id: elizen
         type: book
         format: csv
         dir: ./data/douban
