--- a/.github/workflows/douban.yml
+++ b/.github/workflows/douban.yml
@@ -19,6 +19,14 @@ jobs:
         type: book
         format: csv
         dir: ./data/douban
+        
+    - name: movie
+      uses: lizheming/doumark-action@master
+      with:
+        id: elizen
+        type: movie
+        format: csv
+        dir: ./data/douban
   
     - name: Commit
       uses: EndBug/add-and-commit@v8
