--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ footnotereturnlinkcontents = "↩"
 [params]
   # description abou this website
   description = "There is only one thing in the world worse than being talked about, and that is not being talked about."
-  footer = "&copy; [Elizen](https://elizen.me) | @2015 - 2022"
+  footer = "&copy; [Elizen](https://elizen.me) | since 2009"
   highlightjsCDN = "//cdn.bootcss.com"
   highlightjsLang = ["r", "yaml", "tex"]
   highlightjsTheme = "github"
