--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://elizen.me/"
 languageCode = "en-us"
-title = "Elizen"
+title = "生活在别处"
 theme = "ivy"
 disqusShortname = "elizen"
 hasCJKLanguage = true
