--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://elizen.me/"
 languageCode = "en-us"
 title = "生活在别处"
-theme = "hyde"
+theme = "console"
 disqusShortname = "elizen"
 hasCJKLanguage = true
 enableEmoji = true
