--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://elizen.me/"
 languageCode = "en-us"
 title = "Elizen"
-theme = "ivy"
+theme = "hyde"
 disqusShortname = "elizen"
 hasCJKLanguage = true
 enableEmoji = true
