--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # 基本信息
 baseURL = "https://elizen.me/"
 title = "Elizen"
-theme = "ivy"
+theme = "paged"
 disqusShortname = "elizen"
 hasCJKLanguage = true
 enableEmoji = true
